# cachai

./: .gitignore  .readthedocs.yaml  LICENSE  README-pypi.md  README.md  pyproject.toml
.github/workflows/: release.yaml
cachai/: __init__.py  charts.py  chplot.py  gadgets.py  utilities.py
docs/: Makefile  documentation.md  requirements.txt
docs/nb/: chord_diagrams.ipynb
docs/notebooks/: chord_diagrams.ipynb
docs/source/: citing.rst  conf.py  examples.rst  getting_started.rst  index.rst  installation.rst
docs/source/_static/: cachai_rtd_style.css  cachai_style.js
docs/source/documentation/: data.rst  gadgets.rst  hidden_api.rst  indexdoc.rst  plotting.rst  tests.rst  utilities.rst
