[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cachai"
version = "0.3.1"
authors = [
    {name="Diego Beltrán Flores", email="d.beltran@outlook.cl"},
]
description = "Customizable visualization toolkit for Python"
readme = "README.md"
requires-python = ">=3.10.12"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "scipy>=1.15.3",
]

[project.urls]
Homepage = "https://github.com/DD-Beltran-F/cachai"
Repository = "https://github.com/DD-Beltran-F/cachai"
Issues = "https://github.com/DD-Beltran-F/cachai/issues"