[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cachai"
version = "0.3.1"
authors = [
    {name="Diego Beltrán Flores", email="d.beltran@outlook.cl"},
    {name="Maria Luiza L. Dantas", email="mlldantas@protonmail.com"}
]
maintainers = [
    {name="Diego Beltrán Flores", email="d.beltran@outlook.cl"},
]
description = "Customizable visualization toolkit for science"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.9.0,!=3.9.1",
    "numpy>=2.0.0",
    "pandas>=2.3.0",
    "seaborn>=0.12.0",
    "scipy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/DD-Beltran-F/cachai"
Repository = "https://github.com/DD-Beltran-F/cachai"
Issues = "https://github.com/DD-Beltran-F/cachai/issues"

[project.optional-dependencies]
testing = ["pytest>=7.1.0"]

[project.scripts]
cachai-test = "cachai.__main__:main"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::UserWarning:numpy._core.getlimits',
]